@@ -20,6 +20,12 @@
     "The Domain interface may change in incompatible ways in the future."
 ]
 
+(** Domains.
+
+    See 'Parallel programming' chapter in the manual.
+
+    @since 5.0 *)
+
 type !'a t
 (** A domain of type ['a t] runs independently, eventually producing a
     result of type 'a, or an exception *)
